--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,6 @@ jobs:
         include:
           - python-version: 3.9
             test-type: lint
-          - python-version: 3.9
-            test-type: docs
 
     steps:
       - uses: actions/setup-python@v4
@@ -34,23 +32,17 @@ jobs:
       - run: pip install -U pip setuptools wheel
       - if: matrix.test-type == 'lint'
         run: pip install -U --pre bokeh pandas 'numpy<1.24' && pip install -U .[dev]
-      - if: matrix.test-type == 'docs'
-        run: pip install -e .[doc]  # -e provides _version.py for pdoc
-      - run: pip install -U .[test]
 
       - if: matrix.test-type == 'lint'
-        run: ruff lucit_backtesting
+        run: ruff backtesting
       - if: matrix.test-type == 'lint'
-        run: mypy lucit_backtesting
+        run: mypy backtesting
       - if: matrix.test-type == 'lint'
         env: { BOKEH_BROWSER: none }
-        run: time catchsegv coverage run -m lucit_backtesting.test
+        run: time catchsegv coverage run -m backtesting.test
       - if: matrix.test-type == 'lint'
         run: bash <(curl -s https://codecov.io/bash)
 
       - if: '! matrix.test-type'
         env: { BOKEH_BROWSER: none }
-        run: time catchsegv python -m lucit_backtesting.test
-
-      - if: matrix.test-type == 'docs'
-        run: time catchsegv doc/build.sh
+        run: time catchsegv python -m backtesting.test
